# x-one_test

./: .dockerignore  .env.deploy  .env.template  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.dep.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/: serializers.py  swagger.py  urls.py
apps/blog/: apps.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/user/: apps.py  serializers.py  urls.py  views.py
core/: asgi.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
core/templates/: application.html  index.html
docker/app/: Dockerfile
docker/nginx/: nginx.conf
frontend/: package-lock.json  package.json  vue.config.js  webpack-stats.json
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  blog.js  index.js  user.js
frontend/src/components/: Navbar.vue  SignIn.vue  SignInUp.vue  SignUp.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/store/modules/: auth.js  blog.js
frontend/src/views/: AdminPage.vue  AdminUser.vue  BlogPage.vue  EditPage.vue  Error403.vue  Error404.vue  Error500.vue  Home.vue
scripts/: start_gunicorn
