[tool.poetry]
name = "x-one_test"
version = "0.1.0"
description = ""
authors = ["Дмитрий <dimastbk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-webpack-loader = "^0.7.0"
gunicorn = "^20.0.4"
djangorestframework = "^3.11.0"
psycopg2-binary = "^2.8.5"
drf-yasg = "^1.17.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
